<resources>
    <string name="app_name">Scout Connections</string>
    <string name="registering_user">Registering user…</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_length">Password length must be at least 6 characters</string>
    <string name="user_registered">The user has been registered</string>
    <string name="authentication_error">There was an authentication error</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account? Log in</string>
    <string name="login">Login</string>
    <string name="logging_in">Logging in…</string>
    <string name="recover_password">Recover password</string>
    <string name="recover">Recover</string>
    <string name="existing_email">Please fill in the field with an existing email</string>
    <string name="cancel">Cancel</string>
    <string name="sending_email">Sending email…</string>
    <string name="email_sent">Email sent</string>
    <string name="recovery_failed">Recovery failed</string>
    <string name="password">Password</string>
    <string name="forgot_password">Have you forgot your password? Recover it</string>
    <string name="no_have_account">You do not have an account? Sign up</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="add_post">Add post</string>
    <string name="enter_title">Enter a title</string>
    <string name="enter_description">Enter a description</string>
    <string name="adding_post">Adding post…</string>
    <string name="post_added">Post added</string>
    <string name="adding_post_error">Error adding post</string>
    <string name="error_ocurred">An error has occurred</string>
    <string name="camera">Take photo</string>
    <string name="gallery">Select from gallery</string>
    <string name="select_image">Select an image</string>
    <string name="temporal_image">Temporal image</string>
    <string name="temporal_description">Temporal description</string>
    <string name="enable_camera_storage_permissions">Please enable camera and storage permissions</string>
    <string name="enable_storage_permissions">Please enable storage permissions</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add">Add</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="users">Users</string>
    <string name="profile_problem">There is a problem with the profile</string>
    <string name="edit_image">Edit image</string>
    <string name="edit_cover">Edit cover</string>
    <string name="edit_name">Edit name</string>
    <string name="edit_phone">Edit phone</string>
    <string name="choose_action">Choose action</string>
    <string name="updating_image">Updating image…</string>
    <string name="updating_cover">Updating cover…</string>
    <string name="updating_name">Updating name…</string>
    <string name="updating_phone">Updating phone…</string>
    <string name="update">Update</string>
    <string name="type_here">Type here</string>
    <string name="photo_updated">Photo updated</string>
    <string name="error_updating_photo">Error updating photo</string>
    <string name="name_updated">Name updated</string>
    <string name="phone_updated">Phone updated</string>
    <string name="fill_valid_name">Please fill in the field with a valid name</string>
    <string name="fill_valid_phone">Please fill in the field with a valid phone</string>
    <string name="delete_message">Delete message</string>
    <string name="sure_delete_message">Are you sure you want to delete this message?</string>
    <string name="delete">Delete</string>
    <string name="seen">Seen</string>
    <string name="sent">Sent</string>
    <string name="deleted_message">This message has been deleted</string>
    <string name="only_delete_your_messages">You can only delete your messages</string>
    <string name="chat_list">Chat list</string>
    <string name="typing">typing…</string>
    <string name="online">online</string>
    <string name="last_connection">Last connection</string>
    <string name="no_empty_message">Can\'t send empty message</string>
    <string name="type">Type…</string>
    <string name="chat">Chat</string>
    <string name="deleting">Deleting…</string>
    <string name="deleted_post">Post deleted</string>
    <string name="edit">Edit</string>
    <string name="edit_post">Edit post</string>
    <string name="upload">Upload</string>
    <string name="post_edited">Post edited</string>
    <string name="editing_post_error">Error editing post</string>
    <string name="delete_photo">Delete current photo</string>
    <string name="editing_post">Editing post…</string>
    <string name="liked">Liked</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="post_detail">Post detail</string>
    <string name="view_details">View details</string>
    <string name="likes">Likes</string>
    <string name="adding_comment">Adding comment…</string>
    <string name="comment_empty">Can\'t post empty comment</string>
    <string name="comment_added">Comment added</string>
    <string name="comments">Comments</string>
    <string name="write_comment">Write a comment…</string>
    <string name="sure_delete_comment">Are you sure you want to delete this comment?</string>
    <string name="delete_comment">Delete comment</string>
    <string name="only_delete_your_comments">You can only delete your comments</string>
    <string name="subject_here">Subject here</string>
    <string name="share_via">Share via</string>
    <string name="sending_image">Sending image…</string>
    <string name="image">Image</string>
    <string name="post_liked">Post liked by…</string>
    <string name="change_password">Change password</string>
    <string name="changing_password">Changing password…</string>
    <string name="update_password">Update password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="password_updated">Password updated</string>
    <string name="request_monitor_role">Request monitor role</string>
    <string name="requesting_monitor_role">Requesting monitor role…</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="message_email_monitor_role">I want to become a monitor!</string>
    <string name="create_group">Create group</string>
    <string name="group_title">Group title</string>
    <string name="group_description">Group description</string>
    <string name="creating_group">Creating group…</string>
    <string name="group_created">Group created</string>
    <string name="groups">Groups</string>
    <string name="choose_option">Choose option</string>
    <string name="remove_admin">Remove admin</string>
    <string name="remove_participant">Remove participant</string>
    <string name="make_admin">Make admin</string>
    <string name="creator_group">Creator of the group</string>
    <string name="add_participant">Add participant</string>
    <string name="add_user_group">Add user to group?</string>
    <string name="participant_added">Participant added</string>
    <string name="participant">Participant</string>
    <string name="administrator">Administrator</string>
    <string name="creator">Creator</string>
    <string name="participant_is_admin">Participant is now administrator</string>
    <string name="participant_removed">Participant removed</string>
    <string name="admin_is_participant">Administrator is now participant</string>
    <string name="group_administration">Group administration</string>
    <string name="edit_group">Edit group</string>
    <string name="leave_group">Leave group</string>
    <string name="participants">Participants</string>
    <string name="created_by">Created by</string>
    <string name="on">on</string>
    <string name="delete_group">Delete group</string>
    <string name="sure_delete_group">Are you sure you want to delete this group?</string>
    <string name="sure_leave_group">Are you sure you want to leave this group?</string>
    <string name="leave">Leave</string>
    <string name="left_group">Left group</string>
    <string name="group_deleted">Group deleted</string>
    <string name="group_edited">Group edited</string>
    <string name="events">Events</string>
    <string name="add_event">Add event</string>
    <string name="select_date">Select date</string>
    <string name="delete_post">Delete post</string>
    <string name="sure_delete_post">Are you sure you want to delete this post?</string>
    <string name="sure_delete_event">Are you sure you want to delete this event?</string>
    <string name="deleted_event">Deleted event</string>
    <string name="edit_event">Edit event</string>
    <string name="choose_date">Choose date</string>
    <string name="event_added">Event added</string>
    <string name="adding_event_error">Error adding event…</string>
    <string name="event_edited">Event edited</string>
    <string name="editing_event_error">Error editing event…</string>
    <string name="selected_date">Selected date</string>
    <string name="next_events">Next events</string>
    <string name="editing_event">Editing event…</string>
    <string name="adding_event">Adding event…</string>
    <string name="update_name">Update name</string>
    <string name="update_phone">Update phone</string>
    <string name="social">Social</string>
    <string name="delete_event">Delete event</string>
</resources>