<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_logout"
        android:title="@string/logout"
        android:fontFamily="@font/nunito_sans_extrabold" />

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:icon="@drawable/ic_search_24"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"/>

    <item android:id="@+id/action_users"
        android:title="@string/users"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:icon="@drawable/ic_people_24"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add_post"
        android:title="@string/add_post"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="always"/>

    <item android:id="@+id/action_create_group"
        android:title="@string/create_group"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:icon="@drawable/ic_create_group_24"
        app:showAsAction="always"/>

    <item android:id="@+id/action_add_participant_group"
        android:title="@string/add_participant"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:icon="@drawable/ic_person_add_24"
        app:showAsAction="always"/>

</menu>