<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/register_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="?colorPrimary"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/password_edt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAllCaps="false" />

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/registration_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/registration_btn"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/have_account_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_btn"
        android:drawableLeft="@drawable/ic_person_24"
        android:drawableTint="?colorOnPrimary"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/register"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/have_account_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:gravity="center_horizontal"
        android:text="@string/have_account"
        android:textAlignment="center" />

</RelativeLayout>