<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/scouts" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/ic_person_24"
        android:drawableTint="?colorOnPrimary"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/register"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:drawableLeft="@drawable/ic_login_24"
        android:drawableTint="?colorOnPrimary"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:text="@string/login"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/title_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="290dp"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="?colorPrimary"
        android:textSize="40sp" />


</RelativeLayout>