<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/editextstyle"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_event"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo_24" />

        </LinearLayout>


        <EditText
            android:id="@+id/description_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/editextstyle"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:padding="10dp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/ic_calendar_24"
                android:drawableTint="?colorOnPrimary"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:text="@string/select_date"
                android:textAllCaps="false" />

            <EditText
                android:id="@+id/time_selected_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:editable="false"
                android:focusable="false"
                android:clickable="false"
                android:background="@drawable/editextstyle"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:hint="@string/selected_date"
                android:inputType="textCapSentences"
                android:padding="10dp"
                android:singleLine="true" />

        </LinearLayout>

        <Button
            android:id="@+id/add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:drawableTint="?colorOnPrimary"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_add_24"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/add"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>