<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/title_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/editextstyle"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:hint="@string/title"
            android:inputType="textCapSentences"
            android:padding="10dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_post"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_add_photo_24" />

        </LinearLayout>


        <EditText
            android:id="@+id/description_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/editextstyle"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:minHeight="120dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/add_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/ic_add_24"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:text="@string/add"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>