<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/image_groupinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_people_24"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/description_groupinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/created_by_groupinfo"
                android:background="#77000000"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:padding="5dp"
                android:text="Description of the group"
                android:textColor="#EAE3F5" />

            <TextView
                android:id="@+id/created_by_groupinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#77000000"
                android:fontFamily="@font/nunito_sans_extrabold"
                android:padding="5dp"
                android:text="Created by me on dd/mm/yyyy"
                android:textColor="#EAE3F5"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/edit_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_group"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_edit_24"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/add_participant_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_participant"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_person_add_24"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/leave_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leave_group"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_delete_24"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:id="@+id/participants_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participants"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_people_24"
            android:gravity="center_vertical"
            android:drawablePadding="10dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/participants_rv_group_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/row_add_participants" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>